2006-09-13  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/report.c (report): Rename to ...
	(vreport): ... this.
	(report): New function.
	(debug): Remove function.
	(info): Likewise.
	(error): Likewise.
	(die): Call vreport instead of report.
	(report_type): Move to ...
	* launcher/report.h: ... here.
	(report): New declaration.
	(debug): Change the function declaration to a macro using report.
	(info): Likewise.
	(error): Likewise.

2006-09-11  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (MINIMAL_DEPENDS): Add missing dbus-1 dependency.

2006-09-11  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (rise_oom_defense): Use pid_t for pid variables.
	(invoked_send_pid): Likewise.

2006-09-11  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Set a new session id for the childs.

2006-07-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/ui.h: Renamed to ...
	* launcher/booster.h: ... here. Fix all includers.
	(ui_state): Renamed to ...
	(booster_state_t): ... this. Fix all users.
	(ui_daemon_init): Renamed to ...
	(booster_preinit): ... this. Fix all users.
	(ui_client_init): Renamed to ...
	(booster_init): ... this. Fix all users.
	(ui_state_reload): Renamed to ...
	(booster_reload): ... this. Fix all users.
	* launcher/ui_gtk.h: Renamed to ...
	* launcher/booster_gtk.h: ... this.
	* launcher/ui_gtk.c: Renamed to ...
	* launcher/booster_gtk.c: ... this.
	* Makefile.am (maemo_launcher_SOURCES): Rename ui.h, ui_gtk.h and
	ui_gtk.c to booster.h, booster_gtk.h and booster_gtk.c.

2006-07-05  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HAVE_PRCTL_SET_NAME): New check.
	* launcher/launcher.c: Move the "config.h" include to the top.
	[HAVE_PRCTL_SET_NAME]: Include <sys/prctl.h>.
	(set_process_name): New function.
	(set_progname): Use set_process_name.

2006-07-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.18~.
